# telofinder

./: .readthedocs.yml  CITATION.cff  README.md  environment.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: main.yml
doc/: Projet_Fischer.docx  Projet_fischer_20200624.pptx  conf.py  index.rst  requirements.txt
doc/telofinder_results/: merged_telom_df.csv  raw_df.csv  telom.bed  telom_df.csv  telom_merged.bed
misc/: representatives.fasta  test.telo.blocks.fasta  test_fasta_file_40.fasta
src/R_script/: analysis-telom_length-controls.Rmd  plot_read_prop.R
src/python_script/: 00_analyze_telom_length-v2.py  01_control_not-telom_merging.py  OLD-00_analyze_telom_length.py  analyse_telom_testing.ipynb  analyze_telom_length.py  test_argparse.py  test_black.py
telofinder/: __init__.py  analyze_telom_length.py  env.yml  main.py  plotting.py  telofinder.py  teloroot.py
telofinder/R_script/: OLD-compare-telom_length.Rmd  analysis_telom_length.Rmd  compare_telom_length.Rmd
telofinder/bash_script/: processing_telomeres_cerevisiae.sh
telofinder/data/: AAR_chrXIII_XV  S288C_chr01_03_06.fasta  test.telo.blocks.fasta  test_N.fasta  test_fasta_file_40.fasta  test_fasta_offset.fasta  utg84.fasta
telofinder/python_script/: analyse_telom_testing.ipynb  telofinder.ipynb
test/: test_telomer.py
test/data/: AFH_chrI.fasta
